[tool.poetry]
name = "ozbargain-watcher"
version = "0.1.0"
description = ""
authors = ["Lichader <1524470+lichader@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
feedparser = "^5.2.1"
boto3 = "^1.12.30"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
